<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ncl.team20.seatonvalley.activities.ContactActivity"
    tools:showIn="@layout/app_bar_contact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tw__composer_white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="InefficientWeight">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="InefficientWeight,NestedWeights,UselessParent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/location_icon"
                        android:cropToPadding="true"
                        app:srcCompat="@drawable/location"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:padding="5dp"
                        android:text="@string/council_name"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"

                    android:text="@string/council_address" />

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_contact"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"

                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/opening_hours"
                        android:cropToPadding="true"
                        app:srcCompat="@drawable/opening_hours" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical"
                        android:text="@string/opening_hours"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="5dp"
                        android:text="@string/opening_times" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorGrey"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/report_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:text="@string/contact_directly" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rectangle"
                    android:orientation="horizontal"
                    android:paddingBottom="1dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"

                    android:paddingTop="1dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:contentDescription="@string/contactPhoneDesc"
                        android:padding="2dp"
                        app:srcCompat="@drawable/phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autoLink="phone"
                        android:text="@string/council_contact_phone"
                        android:textAlignment="center"
                        android:textColor="@color/tw__composer_white"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry,SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rectangle"
                    android:orientation="horizontal"
                    android:paddingBottom="1dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="1dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:contentDescription="@string/council_email_address"
                        android:padding="2dp"
                        app:srcCompat="@drawable/email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autoLink="email"
                        android:text="@string/council_contact_email"
                        android:textAlignment="center"
                        android:textColor="@color/tw__composer_white"
                        android:textColorLink="@color/colorPrimary"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry,SmallSp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@color/colorGrey"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/report_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView
                    android:id="@+id/contact_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/contact_form"
                    android:textAlignment="center"

                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/f_name_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textCapSentences|text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorFormHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/l_name_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textCapSentences|text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorFormHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:hint="@string/subject"
                    android:inputType="textCapSentences|text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorFormHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/email_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorFormHint"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/message_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/message"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="10"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorFormHint"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/send_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/colorGreenHighlight"
                    android:text="@string/send_message"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
